--- a/FlaskSurveyForm/templates/base.html
+++ b/FlaskSurveyForm/templates/base.html
@@ -159,6 +159,9 @@
   <script src="https://cdn.jsdelivr.net/npm/autonumeric@4.10.0/dist/autoNumeric.min.js"></script>
   <script src="{{ url_for('static', filename='js/currency.js') }}"></script>
 
+  <!-- Chart.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   {% block scripts %}{% endblock %}
 </body>
 
