--- a/FlaskSurveyForm/templates/home.html
+++ b/FlaskSurveyForm/templates/home.html
@@ -45,6 +45,18 @@
                 </div>
             </a>
         </div>
+        <div class="col-md-4 mb-4">
+            <a href="{{ url_for('leaderboard') }}" class="text-decoration-none">
+                <div class="card h-100 text-center hover-card">
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <i class="fas fa-trophy fa-4x text-primary"></i>
+                        </div>
+                        <h3 class="card-title">Leaderboard</h3>
+                    </div>
+                </div>
+            </a>
+        </div>
         {% endif %}
     </div>
 </div>
