--- a/FlaskSurveyForm/static/css/custom.css
+++ b/FlaskSurveyForm/static/css/custom.css
@@ -139,7 +139,7 @@ a.approve-btn.approved:hover {
   color: var(--bs-white); /* Ensure icon color changes */
 }
 a.approve-btn.approved:hover .btn-text::before {
-    color: var(--bs-white); /* Explicitly set text color on hover */
+  color: var(--bs-white); /* Explicitly set text color on hover */
 }
 
 /* Modal styling overrides */
@@ -168,4 +168,37 @@ a.approve-btn.approved:hover .btn-text::before {
   background: var(--bs-primary);
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
+}
+
+#training-type-card-group {
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  gap: 0.5rem;
+  min-height: 100px;
+}
+
+
+.training-type-card {
+  position: relative;
+  width: 100%;
+  max-width: 200px;
+  max-height: 200px;
+  padding: 2rem 1.5rem;
+  border-radius: 12px;
+  background-color: #121c2e;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #2e3747;
+  margin: 0.5rem;
+  height: 100%;
+  min-height: 280px;
+}
+
+.training-type-card.selected {
+  border-color: #2563eb !important;
 }
